bugfix icon deleted z-index

--- a/blocks/button/_type/button_type_delete-element.css
+++ b/blocks/button/_type/button_type_delete-element.css
@@ -6,6 +6,7 @@
   border: none;
   right: 20px;
   top: 20px;
+  z-index: 10;
 }
 
 .button_type_delete-element:hover {
