--- a/blocks/button/_type/button_type_like.css
+++ b/blocks/button/_type/button_type_like.css
@@ -1,7 +1,7 @@
 .button_type_like {
   background-image: url(../../../images/like.svg);
   border: none;
-  width: 26px;
+  width: 30px;
   background-repeat: no-repeat;
   background-position: center;
   padding: 0 10px;
