--- a/blocks/elements/__foto/elements__foto.css
+++ b/blocks/elements/__foto/elements__foto.css
@@ -13,5 +13,7 @@
 
 
 .elements__foto:hover {
- filter: sepia(1);
+ filter: sepia(0.5);
+ outline: 1px solid rgb(255, 255, 255);
+ cursor: pointer;
 }
